Alterado: RequestsDTOs agora são Records